[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/char_a_p1_0bas_humn_v01.png" type="Texture" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 384, 64, 64 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "attack_down",
"speed": 2.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "attack_left",
"speed": 3.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "attack_right",
"speed": 3.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "grappling",
"speed": 0.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "jump_left",
"speed": 0.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "jump_right",
"speed": 0.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "jump_up",
"speed": 0.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 0.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 21, 37 )

[node name="Mob" type="KinematicBody2D" groups=["mobs"]]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.901961, 0, 0.505882, 1 )
scale = Vector2( 3, 3 )
frames = SubResource( 26 )
animation = "walk_left"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 27 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="JumpTimer" type="Timer" parent="."]
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
